syntax = "proto3";

import "common.proto";
import "protos/futuresCommon.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "Ligric.Protobuf";

package ligric.protobuf;

service BinanceFuturesTrades {
    rpc TradesSubscribe(FuturesSubscribeRequest) returns (stream TradesChanged);

	rpc AddTradesStreamingApi(AddStreamingApiRequest) returns (AddStreamingApiResponse);

	rpc RemoveTradesStreamingApi(RemoveStreamingApiRequest) returns (ResponseResult);
}

message TradesChanged {
	FuturesTrade Trade = 1;
	Action action = 2;
}

message FuturesTrade
{
	string Symbol = 1;
	string Value = 2;
}
